--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,9 @@
  h1, h2, h3, h4, h5, h6 {
      font-family: castoro;
 }
+.text-italic{
+        font-style: italic;
+}
  @media (min-width: 1200px) {
      .container {
          max-width: calc(100% - 96px);
@@ -407,7 +410,6 @@
      background-repeat: no-repeat;
      background-position: center;
 }
-
  .slide-1 .imageoverlay{
      background: rgba(0, 0, 0, 0.5);
      position: absolute;
@@ -583,7 +585,9 @@
      line-height: 28px;
      margin-bottom: 0px;
 }
-
+.section-title.black h2{
+    color: #000;
+}
 .services-associate  .section-title h2 {
    color: #000;
 }
@@ -613,11 +617,7 @@
     }
 }
 /*---------- # About -----------*/
- .about {
-     padding-top: 66px;
-     position: relative;
-     padding-bottom: 50px;
-}
+
  .about .content h3 {
      font-weight: 600;
      font-size: 26px;
@@ -635,7 +635,7 @@
      font-size: 28px;
      font-family: MavenPro Regular;
      color: #000;
-     text-align: justify;
+     
 }
  .about .content .btn-learn-more {
      font-weight: 700;
@@ -652,6 +652,7 @@
      animation-delay: 0.8s;
      border: 1px solid #011E41;
 }
+
  @media(max-width:767px){
      .about{
          padding-top: 32px;
@@ -678,6 +679,22 @@
  .services .hoverbox{
      color: #fff;
 }
+.services .btn-learn-more {
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 18px;
+    display: inline-block;
+    padding: 21px 39px;
+    border-radius: 0px;
+    transition: 0.5s;
+    line-height: 21px;
+    color:   rgba(197, 217, 231, 1);
+    font-family: MavenPro Bold;
+    -webkit-animation-delay: 0.8s;
+    animation-delay: 0.8s;
+    max-width: max-content;
+    border: 2px solid  rgba(197, 217, 231, 1);;
+}
  .bluebox {
      flex: 0 0 auto;
      width: 50%;
@@ -685,18 +702,22 @@
      position: relative;
 }
  .bluebox .content {
-     background: var(--bs-darkblue);
-     width: 100%;
-     padding:72px 70px;
-     display: flex;
-     flex-direction: column;
-     padding-bottom: 65px;
-     justify-content: center;
-     min-height: 100%;
-     color: var( --bs-white) ;
+    background: var(--bs-darkblue);
+    width: 100%;
+    padding: 72px 70px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 65px;
+    justify-content: center;
+    min-height: 96.4%;
+    /* margin: 5px 0; */
+    color: var( --bs-white);
+    /* margin-bottom: 0.5%; */
+    margin: 1% 0px;
 }
 .companyintro .bluebox .content{
     min-height: 100%;
+    margin: 0px;
 }
  .bluebox .content:hover{
      background: rgba(197, 217, 231, 0.5);
@@ -711,6 +732,8 @@
 }
  .bluebox .content:hover> .btn-learn-more{
      color: var(--bs-darkblue);
+     background: transparent;
+     border-color: var(--bs-darkblue);
 }
  .bluebox .content h3 {
      font-size: 48px;
@@ -720,11 +743,11 @@
      margin-bottom: 32px;
 }
  .bluebox .content p {
-      font-size: 20px;
-    line-height: 26px;
+        font-size: 20px;
+    line-height: 30px;
     margin-bottom: 40px;
-    font-family: MavenPro Medium;
-    text-align: justify;
+    font-family: MavenPro Regular;
+    
 }
  .bluebox .btn-learn-more {
      bottom: 72px;
@@ -734,12 +757,7 @@
      font-size: 50px;
      line-height: 0px;
 }
- .bluebox .btn-learn-more {
-     background: transparent !important;
-}
- .bluebox .btn-learn-more img{
-     height: 28px;
-}
+ 
 .services .bluebox .imagecontent{
      height: 100%;
 }
@@ -820,7 +838,7 @@
      font-family: MavenPro Regular;
      color: #000;
      margin-bottom: 32px;
-         text-align: justify;
+         
 }
  .whoweare .content .btn-learn-more {
      font-weight: 700;
@@ -1019,6 +1037,9 @@
     }
 }
 /*------- # Goal Study------------*/
+ .goal.contentonly{
+     padding-top:44px;
+ }
  .goal .columnbox3 {
      padding: 12px 12px;
      flex: 0 0 auto;
@@ -1051,7 +1072,7 @@ color: #fff;
     margin-bottom: 27px;
  }
  .goal.contentonly .hoverbox p{
-     text-align: justify;
+     
  }
  .goal .hoverbox .content-title h3 {
      margin-bottom: 37px;
@@ -1105,7 +1126,7 @@ color: #fff;
      color: #fff;
      font-size: 36px;
      line-height: 54px;
-     margin-bottom: 94px;
+     margin-bottom: 70px;
 }
  .goal .content-details p {
      color: #fff;
@@ -1148,7 +1169,7 @@ color: #fff;
     }
      .goal .hoverbox{
          padding: 32px 32px;
-         min-height: 260px;
+         min-height: 296px;
     }
      .goal .section-title{
          padding-bottom: 22px;
@@ -1223,7 +1244,7 @@ color: #fff;
      float: right;
 }
  #footer .socialmedia {
-     clear: both;
+    
      color: #fff;
 }
  #footer .socialmedia  a{
@@ -1276,13 +1297,17 @@ color: #fff;
     }
      #footer .text{
          margin-bottom: 0px;
+         font-size: 13px;
     }
      #footer .copyright p{
-         font-size: 14px;
+         font-size: 13px;
          line-height: 15px;
     }
+    #footer .socialmedia{
+        font-size: 13px;
+    }
      #footer .footermenu ul li {
-         font-size: 14px;
+         font-size: 13px;
          padding: 3px 0px;
     }
      #footer .footer-logo{
@@ -1433,7 +1458,7 @@ color: #fff;
 /*------ # Overview -------*/
  .overview {
      padding: 64px 0px;
-     padding-bottom: 71px;
+     /* padding-bottom: 71px; */
 }
  .overview .section-title {
      padding-bottom: 32px;
@@ -1444,7 +1469,7 @@ color: #fff;
      font-family: MavenPro Regular;
      color: #000;
      margin-bottom: 0px;
-     text-align: justify;
+     
 }
  .overview .content .btn-learn-more {
      font-weight: 700;
@@ -1492,7 +1517,7 @@ color: #fff;
      font-family: MavenPro Regular;
      color: #000;
      margin-bottom: 64px;
-     text-align: justify;
+     
 }
  .description .content p.mr-btm-32 {
      margin-bottom: 32px;
@@ -1539,7 +1564,7 @@ color: #fff;
      padding-bottom: 40px;
 }
  .worldaround .contentbox{
-      background: rgba(46, 87, 175, 1);
+      background: #011E41;
     padding: 75px 32px;
     min-height: 95%;
     color: #fff;
@@ -1564,7 +1589,7 @@ color: #fff;
      font-size: 24px;
      line-height: 29px;
      margin-bottom: 0px;
-     text-align: justify;
+     
 }
 .worldaround .largedata .contentbox{
    min-height: 95%; 
@@ -1580,7 +1605,7 @@ color: #fff;
 }
 .worldaround .largedata .contentbox h3{
  font-size: 32px;
-     line-height: 32px;
+     line-height: 40px;
 }
 .worldaround .largedata  .contentbox p {
     font-size: 18px;
@@ -1627,6 +1652,9 @@ color: #fff;
     }
 }
 /*------ # Approach-------*/
+.approach{
+    padding-bottom: 44px;
+}
  .approach .section-title {
      padding-bottom: 32px;
 }
@@ -1637,7 +1665,7 @@ color: #fff;
      font-size: 28px;
      line-height: 40px;
      margin-bottom: 32px;
-     text-align: justify;
+     
 }
  @media(max-width:767px){
      .approach .content p{
@@ -1664,7 +1692,7 @@ color: #fff;
      font-size: 16px;
      line-height: 22px;
      margin-bottom: 0px;
-     text-align: justify;
+     
 }
  .masonry-layout.no-content .contentbluebox{
       min-height: 87%;
@@ -1714,11 +1742,11 @@ color: #fff;
 }
 /*-------cta--------*/
  .cta{
-     padding: 100px 0;
+     padding: 64px 0;
 }
  .cta h3{
-     font-size: 48px;
-     line-height: 52px;
+     font-size: 32px;
+     line-height: 40px;
      margin-bottom: 0px;
 }
  .cta .btn-learn-more{
@@ -1744,8 +1772,8 @@ color: #fff;
          padding: 50px 0;
     }
      .cta h3 {
-         font-size: 42px;
-         line-height: 44px;
+        font-size: 25px;
+    line-height: 31px;
     }
 }
  @media(max-width:767px){
@@ -1773,22 +1801,23 @@ color: #fff;
  .steps .step{
      background: rgba(245, 245, 245, 1);
      margin-bottom: 24px;
+         height: 96%;
 }
  .steps .step img{
      width: 100%;
 }
  .steps .step .content{
-     padding: 35px 32px 48px 32px;
-         min-height: 148px;
+      padding: 40px 32px 32px 32px;
+    padding-bottom: 70px
 }
  .steps .step .content h3{
      color: #000;
-     font-size: 36px;
-     line-height: 50px;
+     font-size: 30px;
+     line-height: 40px;
 }
  .steps .step .content p{
      font-size: 18px;
-     line-height: 27px;
+     line-height: 29px;
      color: rgba(1, 30, 65, 1);
      padding-right: 8px;
      margin-bottom: 0px;
@@ -1796,12 +1825,10 @@ color: #fff;
 }
  @media(max-width:767px){
      .steps .step .content h3{
-         font-size: 32px;
+         font-size: 27px;
          line-height: 32px;
     }
-     .steps .step .content{
-         padding: 35px 32px 31px 32px;
-    }
+    
      .steps .step .content p {
          font-size: 18px;
          line-height: 24px;
@@ -1964,6 +1991,7 @@ color: #fff;
 /*career*/
  .opportunities{
      padding: 64px 0px;
+     padding-bottom: 44px;
 }
  .opportunities .career-position{
      background: #F0F5F9;
@@ -2280,4 +2308,43 @@ padding-bottom: 15px;
     line-height: 22px;
     margin-bottom: 0px;
 }
+}
+
+
+
+
+.services .bluebox:nth-child(2) .content{
+       justify-content: center;
+    min-height: 98.4%;
+    margin-top: 0px;
+
+}
+
+.masonry-layout div:nth-child(1) .contentbluebox{
+  background: #011E41;
+    opacity: 75%;
+}
+.masonry-layout div:nth-child(2) .contentbluebox{
+  background: #011E41;
+    opacity: 80%; 
+}
+.masonry-layout div:nth-child(3) .contentbluebox{
+   background: #011E41;
+    opacity: 85%; 
+}
+.masonry-layout div:nth-child(4) .contentbluebox{
+   background: #011E41;
+    opacity: 90%;
+}
+.masonry-layout div:nth-child(5) .contentbluebox{
+  background: #011E41;
+    opacity: 95%; 
+}
+.masonry-layout div:nth-child(6) .contentbluebox{
+   background: #011E41;
+    opacity: 100%; 
+}
+.masonry-layout div:last-child .contentbluebox{
+  background: #011E41;
+    opacity: 100%;
 }
