--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -446,7 +446,10 @@
          min-height: 364px;
     }
      .goal .content-details h3{
-         margin-bottom: 52px;
+         margin-bottom: 30px;
+    }
+    .goal .content-details{
+        padding: 32px 64px;
     }
      #banner h1{
          font-size: 50px;
@@ -458,7 +461,7 @@
          line-height: 20px;
     }
      #banner p {
-         width: 54%;
+         width: 68%;
          font-size: 21px;
          line-height: 28px;
          margin-bottom: 0px;
